Finished user page, side bar and most of home page

--- a/client/src/components/headerComponent/header.css
+++ b/client/src/components/headerComponent/header.css
@@ -10,7 +10,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: #2F2F2F;
+    background-color: #1c1c1c;
 }
 
 .title {
