Finished v0.1.0 Created orderpage, createorderpage and createtextpage

--- a/client/src/pages/userPage/userPage.css
+++ b/client/src/pages/userPage/userPage.css
@@ -24,6 +24,7 @@
 .info {
     display: flex;
     align-items: center;
+    font-size: 24px;
     margin: 5% 5% 0 5%;
     background-color: #A5A5A4;
     border-radius: 8px;
